// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`json body > array input > requires at least one source 1`] = `
{
  "code": "FST_ERR_VALIDATION",
  "details": {
    "0": [
      "At least one ID must be provided",
    ],
  },
  "error": "Bad Request",
  "message": "Validation error",
  "statusCode": 400,
}
`;

exports[`json body > object input > errors correctly on an empty object 1`] = `
{
  "code": "FST_ERR_VALIDATION",
  "details": {
    "$": [
      "At least one ID must be provided",
    ],
  },
  "error": "Bad Request",
  "message": "Validation error",
  "statusCode": 400,
}
`;

exports[`json body > object input > gET fails with json body 1`] = `
{
  "code": "FST_ERR_VALIDATION",
  "details": {
    "$": [
      "Invalid type: Expected Object but received Object",
    ],
  },
  "error": "Bad Request",
  "message": "Validation error",
  "statusCode": 400,
}
`;
